--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^3.0@rc",
+        "api-platform/core": "^3.0",
         "composer/package-versions-deprecated": "1.11.99.5",
         "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.7",
@@ -20,6 +20,7 @@
         "symfony/expression-language": "6.1.*",
         "symfony/flex": "^2.2",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/messenger": "6.1.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.1.*",
         "symfony/property-info": "6.1.*",
@@ -27,6 +28,7 @@
         "symfony/security-bundle": "6.1.*",
         "symfony/serializer": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
+        "symfony/uid": "6.1.*",
         "symfony/validator": "6.1.*",
         "symfony/yaml": "6.1.*"
     },
