--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,8 +1,9 @@
+imports:
+    - { resource: ../../src/*/Infrastructure/Configuration/ApiPlatform/mapping.yaml }
+
 api_platform:
     title: Hello API Platform
     version: 1.0.0
-    mapping:
-        paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
         json: ['application/merge-patch+json']
     swagger:
