--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,3 +1,6 @@
+imports:
+    - { resource: ../../src/*/Infrastructure/Configuration/Doctrine/mapping.yaml }
+
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
@@ -9,9 +12,3 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
-        mappings:
-            App:
-                is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
