--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/phpunit-bridge": "6.1.*",
         "symfony/stopwatch": "6.1.*",
         "symfony/var-dumper": "6.1.*",
-        "symfony/web-profiler-bundle": "6.1.*"
+        "symfony/web-profiler-bundle": "6.1.*",
+        "vimeo/psalm": "^4.29"
     },
     "config": {
         "optimize-autoloader": true,
