--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
         "friendsofphp/php-cs-fixer": "^3.13",
+        "phpstan/phpstan": "^1.9",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/debug-bundle": "6.1.*",
