Move Symfony configs to the Infrastructure layer

--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: ../../src/*/Infrastructure/Configuration/ApiPlatform/mapping.yaml }
+    - { resource: ../../../../../*/Infrastructure/Configuration/ApiPlatform/mapping.yaml }
 
 api_platform:
     title: Hello API Platform
