--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/messenger.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/messenger.yaml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: ../../src/*/Infrastructure/Configuration/Messenger/* }
+    - { resource: ../../../../../*/Infrastructure/Configuration/Messenger/* }
 
 framework:
     messenger:
