Introduce Account BC

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
