--- a/.env
+++ b/.env
@@ -41,3 +41,9 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/private/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/private/jwt/public.pem
+JWT_PASSPHRASE=ad88a9764bbcb38841d3d60746decc31
+###< lexik/jwt-authentication-bundle ###
