--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
         "guzzlehttp/guzzle": "^7.4",
+        "lexik/jwt-authentication-bundle": "^2.18",
         "nelmio/cors-bundle": "^2.2",
         "phpstan/phpdoc-parser": "^1.16",
         "symfony/asset": "6.2.*",
@@ -35,7 +36,9 @@
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
         "friendsofphp/php-cs-fixer": "^3.13",
+        "hautelook/alice-bundle": "^2.11",
         "phpspec/phpspec": "^7.3",
+        "phpspec/prophecy-phpunit": "^2.0",
         "phpstan/phpstan": "^1.9",
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
