--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
@@ -8,6 +8,10 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+        api_keys:
+            JWT:
+                name: Authorization
+                type: header
     # Good cache defaults for REST APIs
     defaults:
         stateless: true
