--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
         "friendsofphp/php-cs-fixer": "^3.13",
+        "phpspec/phpspec": "^7.3",
         "phpstan/phpstan": "^1.9",
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
