--- a/.env.test
+++ b/.env.test
@@ -5,5 +5,11 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/private/jwt/private_test.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/private/jwt/public_test.pem
+JWT_PASSPHRASE=ad88a9764bbcb38841d3d60746decc31
+###< lexik/jwt-authentication-bundle ###
+
 # API Platform distribution
 TRUSTED_HOSTS=^example\.com|localhost$
