--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,8 @@
     },
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
+        "behat/behat": "^3.12",
+        "friends-of-behat/symfony-extension": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.13",
         "hautelook/alice-bundle": "^2.11",
         "lchrusciel/api-test-case": "^5.2",
