Cover all already implemented functionalities with Behat scenarios

--- a/tests/Behat/Configuration/services.yaml
+++ b/tests/Behat/Configuration/services.yaml
@@ -5,3 +5,7 @@ parameters:
 
 imports:
     - { resource: Service/**/* }
+
+services:
+    App\Tests\Util\HttpRequestBuilder:
+        arguments: [ '@test.api_platform.client' ]
