--- a/tests/Behat/Configuration/Suite/api/auth.yaml
+++ b/tests/Behat/Configuration/Suite/api/auth.yaml
@@ -5,6 +5,7 @@ default:
     suites:
         api_auth:
             contexts:
+                - App\Tests\Behat\Context\Hook\ClipboardContext
                 - App\Tests\Behat\Context\Hook\DoctrineOrmContext
                 - App\Tests\Behat\Context\Setup\UserContext
                 - App\Tests\Behat\Context\Api\AuthContext
