--- a/tests/Behat/Configuration/Suite/api/user.yaml
+++ b/tests/Behat/Configuration/Suite/api/user.yaml
@@ -2,6 +2,7 @@ default:
     suites:
         api_user:
             contexts:
+                - App\Tests\Behat\Context\Hook\ClipboardContext
                 - App\Tests\Behat\Context\Hook\DoctrineOrmContext
                 - App\Tests\Behat\Context\Setup\UserContext
                 - App\Tests\Behat\Context\Api\UserContext
