--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,10 @@
         "friendsofphp/php-cs-fixer": "^3.13",
         "hautelook/alice-bundle": "^2.11",
         "lchrusciel/api-test-case": "^5.2",
+        "phpat/phpat": "^0.10.3",
         "phpspec/phpspec": "^7.3",
         "phpspec/prophecy-phpunit": "^2.0",
+        "phpstan/extension-installer": "^1.2",
         "phpstan/phpstan": "^1.9",
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
@@ -63,7 +65,8 @@
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "phpstan/extension-installer": true
         }
     },
     "autoload": {
