Introduce continuous integration

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -24,8 +24,16 @@
     </php>
 
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="all">
             <directory>tests</directory>
+        </testsuite>
+
+        <testsuite name="contract">
+            <directory>tests/Api</directory>
+        </testsuite>
+
+        <testsuite name="unit">
+            <directory>tests/App</directory>
         </testsuite>
     </testsuites>
 
@@ -38,11 +46,4 @@
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
-
-    <!-- Run `composer require symfony/panther` before enabling this extension -->
-    <!--
-    <extensions>
-        <extension class="Symfony\Component\Panther\ServerExtension" />
-    </extensions>
-    -->
 </phpunit>
