Fix typo in API processors

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,9 +5,9 @@ parameters:
     excludePaths:
         - src/Shared/Infrastructure/Symfony/Kernel.php
     ignoreErrors:
-        - '/Method Panda\\\w+\\Infrastructure\\ApiState\\Processor\\\w+Procesor::process\(\) has no return type specified./'
-        - '/Method Panda\\\w+\\Infrastructure\\ApiState\\Processor\\\w+Procesor::process\(\) has parameter \$(context|uriVariables) with no value type specified in iterable type array./'
-        - '/Method Panda\\\w+\\Infrastructure\\ApiState\\Processor\\\w+Procesor::process\(\) has parameter \$data with no type specified./'
+        - '/Method Panda\\\w+\\Infrastructure\\ApiState\\Processor\\\w+Processor::process\(\) has no return type specified./'
+        - '/Method Panda\\\w+\\Infrastructure\\ApiState\\Processor\\\w+Processor::process\(\) has parameter \$(context|uriVariables) with no value type specified in iterable type array./'
+        - '/Method Panda\\\w+\\Infrastructure\\ApiState\\Processor\\\w+Processor::process\(\) has parameter \$data with no type specified./'
         - '/Method Panda\\\w+\\Infrastructure\\ApiState\\Provider\\\w+Provider::provide\(\) has parameter \$(context|uriVariables) with no value type specified in iterable type array./'
         -
             message: '/Generator expects value type object, mixed given./'
