--- a/tests/Behat/Configuration/services.yaml
+++ b/tests/Behat/Configuration/services.yaml
@@ -8,4 +8,6 @@ imports:
 
 services:
     Panda\Tests\Util\HttpRequestBuilder:
-        arguments: [ '@test.api_platform.client' ]
+        arguments:
+            - '@test.api_platform.client'
+            - '@ApiPlatform\Api\IriConverterInterface'
