--- a/fixtures/api/asset.yaml
+++ b/fixtures/api/asset.yaml
@@ -1,3 +1,5 @@
 Panda\Asset\Domain\Model\Asset:
     asset_acme:
         __construct: ['ACM', 'Acme Corp.']
+        createdAt: <(new DateTimeImmutable())>
+        updatedAt: <(new DateTimeImmutable())>
