Use doctrine_transaction middleware for a command bus

--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/messenger.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/messenger.yaml
@@ -19,8 +19,13 @@ framework:
         default_bus: command.bus
         
         buses:
-            command.bus: ~
-            query.bus: ~
+            command.bus:
+                middleware:
+                    - validation
+                    - doctrine_transaction
+            query.bus:
+                middleware:
+                    - validation
 
 # when@test:
 #    framework:
