--- a/fixtures/api/assets.yaml
+++ b/fixtures/api/assets.yaml
@@ -1,5 +1,10 @@
+include:
+    - 'user.yaml'
+    - 'asset.yaml'
+
 Panda\Asset\Domain\Model\Asset:
     asset_{1..3}:
         __construct: [<lexify(???)>, <company()>]
+        ownedBy: '@user_panda'
         createdAt: <dateTimeBetween('-200 days', 'now')>
         updatedAt: <dateTimeBetween($createdAt, 'now')>
