--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/doctrine.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/doctrine.yaml
@@ -12,3 +12,5 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
+        resolve_target_entities:
+            Panda\Contract\AggregateRoot\Owner\OwnerInterface: Panda\Account\Domain\Model\User
