Implement "create transaction" functionality and drop TRANSFER type

--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
@@ -22,3 +22,5 @@ api_platform:
         stateless: true
         cache_headers:
             vary: ['Content-Type', 'Authorization', 'Origin']
+    exception_to_status:
+        Panda\Shared\Application\Exception\MessengerViolationFailedCompoundException: 422
