--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/validator.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/validator.yaml
@@ -1,3 +1,6 @@
 framework:
     validation:
         email_validation_mode: html5
+        mapping:
+            paths:
+                - '%kernel.project_dir%/src/Transaction/Infrastructure/Configuration/Symfony/validation'
