--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/doctrine.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/doctrine.yaml
@@ -13,4 +13,4 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         resolve_target_entities:
-            Panda\Contract\AggregateRoot\Owner\OwnerInterface: Panda\Account\Domain\Model\User
+            Panda\AccountOHS\Domain\Model\Owner\OwnerInterface: Panda\Account\Domain\Model\User
