--- a/tests/Behat/Configuration/suites.yaml
+++ b/tests/Behat/Configuration/suites.yaml
@@ -1,5 +1,6 @@
 imports:
     - Suite/api/asset.yaml
     - Suite/api/auth.yaml
+    - Suite/api/portfolio.yaml
     - Suite/api/transaction.yaml
     - Suite/api/user.yaml
