--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/messenger.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/messenger.yaml
@@ -23,6 +23,10 @@ framework:
                 middleware:
                     - validation
                     - doctrine_transaction
+            event.bus:
+                default_middleware: allow_no_handlers
+                middleware:
+                    - validation
             query.bus:
                 middleware:
                     - validation
