--- a/src/Shared/Infrastructure/Configuration/Symfony/Package/messenger.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/Package/messenger.yaml
@@ -24,9 +24,8 @@ framework:
                     - validation
                     - doctrine_transaction
             event.bus:
-                default_middleware: allow_no_handlers
-                middleware:
-                    - validation
+                default_middleware:
+                    allow_no_handlers: true
             query.bus:
                 middleware:
                     - validation
