Introduce PortfolioACL to handle events from Trade BC and map them into commands

--- a/src/Shared/Infrastructure/Configuration/Symfony/services.yaml
+++ b/src/Shared/Infrastructure/Configuration/Symfony/services.yaml
@@ -4,4 +4,5 @@ parameters:
     locale: en_US
 
 imports:
-    - { resource: ../../../../*/Infrastructure/Configuration/Symfony/Service/**/* }
+    - { resource: ../../../../*/Infrastructure/Configuration/Symfony/Service/**/* } # Bounded Contexts
+    - { resource: ../../../../*/*/Configuration/Symfony/Service/**/* } # Anti-Corruption Layers
