Adjust Behat scenarios to the portfolio requirements

--- a/tests/Behat/Configuration/Suite/api/asset.yaml
+++ b/tests/Behat/Configuration/Suite/api/asset.yaml
@@ -5,6 +5,7 @@ default:
                 - Panda\Tests\Behat\Context\Hook\ClipboardContext
                 - Panda\Tests\Behat\Context\Hook\DoctrineOrmContext
                 - Panda\Tests\Behat\Context\Setup\AssetContext
+                - Panda\Tests\Behat\Context\Setup\PortfolioContext
                 - Panda\Tests\Behat\Context\Setup\UserContext
                 - Panda\Tests\Behat\Context\Api\AssetContext
                 - Panda\Tests\Behat\Context\Transform\AssetContext
