--- a/src/Core/Infrastructure/Configuration/Symfony/Package/validator.yaml
+++ b/src/Core/Infrastructure/Configuration/Symfony/Package/validator.yaml
@@ -3,4 +3,5 @@ framework:
         email_validation_mode: html5
         mapping:
             paths:
+                - '%kernel.project_dir%/src/Portfolio/Infrastructure/Configuration/Symfony/validation'
                 - '%kernel.project_dir%/src/Trade/Infrastructure/Configuration/Symfony/validation'
