Choose Portfolio with X-Portfolio-Id HTTP header

--- a/src/Core/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
+++ b/src/Core/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
@@ -1,5 +1,6 @@
 imports:
     - { resource: ../../../../../*/Infrastructure/Configuration/ApiPlatform/mapping.yaml }
+    - { resource: ../../../../../*/Infrastructure/Configuration/ApiPlatform/exception.yaml }
 
 api_platform:
     title: PANDA API
