--- a/fixtures/api/portfolio.yaml
+++ b/fixtures/api/portfolio.yaml
@@ -3,12 +3,12 @@ include:
 
 Panda\Portfolio\Domain\Model\Portfolio:
     portfolio_default:
-        __construct: ['Default Portfolio', true]
+        __factory: {'Panda\Tests\Fixture\Factory\PortfolioFactory::create': ['Default Portfolio', 'PLN', 'Polish Zloty', true] } 
         ownedBy: '@user_panda'
         createdAt: <(new DateTimeImmutable())>
         updatedAt: <(new DateTimeImmutable())>
     portfolio_additional:
-        __construct: ['Additional Portfolio', false]
+        __factory: {'Panda\Tests\Fixture\Factory\PortfolioFactory::create': ['Additional Portfolio', 'USD', 'US Dollar', false] }
         ownedBy: '@user_panda'
         createdAt: <(new DateTimeImmutable())>
         updatedAt: <(new DateTimeImmutable())>
