--- a/tests/Behat/Configuration/suites.yaml
+++ b/tests/Behat/Configuration/suites.yaml
@@ -2,6 +2,7 @@ imports:
     - Suite/api/asset.yaml
     - Suite/api/auth.yaml
     - Suite/api/exchange_rate_live.yaml
+    - Suite/api/exchange_rate_log.yaml
     - Suite/api/portfolio.yaml
     - Suite/api/transaction.yaml
     - Suite/api/user.yaml
