Fix all deprecations

--- a/src/Core/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
+++ b/src/Core/Infrastructure/Configuration/Symfony/Package/api_platform.yaml
@@ -6,6 +6,8 @@ api_platform:
     title: PANDA API
     version: dev
     show_webby: false
+    use_symfony_listeners: false
+    keep_legacy_inflector: false
     patch_formats:
         json: ['application/merge-patch+json']
     formats:
