--- a/src/Core/Infrastructure/Configuration/Symfony/Package/doctrine.yaml
+++ b/src/Core/Infrastructure/Configuration/Symfony/Package/doctrine.yaml
@@ -12,5 +12,8 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
+        enable_lazy_ghost_objects: true
+        controller_resolver:
+            auto_mapping: false
         resolve_target_entities:
             Panda\AccountOHS\Domain\Model\Owner\OwnerInterface: Panda\Account\Domain\Model\User
