--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "lexik/jwt-authentication-bundle": "^2.18",
         "nelmio/cors-bundle": "^2.2",
         "phpstan/phpdoc-parser": "^1.16",
+        "stof/doctrine-extensions-bundle": "^1.12",
         "symfony/asset": "^6.4",
         "symfony/console": "^6.4",
         "symfony/dotenv": "^6.4",
@@ -30,6 +31,7 @@
         "symfony/runtime": "^6.4",
         "symfony/security-bundle": "^6.4",
         "symfony/serializer": "^6.4",
+        "symfony/string": "^6.4",
         "symfony/twig-bundle": "^6.4",
         "symfony/uid": "^6.4",
         "symfony/validator": "^6.4",
