--- a/src/Core/Infrastructure/Configuration/Symfony/Package/framework.yaml
+++ b/src/Core/Infrastructure/Configuration/Symfony/Package/framework.yaml
@@ -3,6 +3,7 @@ framework:
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     http_method_override: false
+    handle_all_throwables: true
     trusted_proxies: '%env(TRUSTED_PROXIES)%'
     trusted_hosts: '%env(TRUSTED_HOSTS)%'
     # See https://caddyserver.com/docs/caddyfile/directives/reverse_proxy#headers
@@ -12,6 +13,9 @@ framework:
     #fragments: true
     php_errors:
         log: true
+        
+    annotations:
+        enabled: false
 
 when@test:
     framework:
