--- a/src/Core/Infrastructure/Configuration/Symfony/Package/security.yaml
+++ b/src/Core/Infrastructure/Configuration/Symfony/Package/security.yaml
@@ -7,7 +7,7 @@ security:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: Panda\Account\Domain\Model\User
+                class: Panda\Account\Infrastructure\Symfony\Security\User
                 property: email
     firewalls:
         dev:
